--- a/css/cart.css
+++ b/css/cart.css
@@ -19,135 +19,7 @@ body {
 
 
 
-/* CSS pour le header •••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••• */
 
-
-header {
-    width: 100%;
-    padding: 10px;
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-between;
-    align-items: center;
-    background-color: rgba(0, 100, 255, 0.85);
-}
-
-#headerLogoLink {
-    width: 15%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
-#headerLogo {
-    width: 50px;
-    height: auto;
-}
-#headerLogo:hover {
-    filter: brightness(1.5);
-    transition: 0.25s;
-}
-#headerLogo:active {
-    transform: scale(0.95);
-    transition: 0.25s;
-}
-
-#headerSearchDiv {
-    width: 70%;
-    height: 100%;
-    display: flex;
-    justify-content: right;
-    align-items: center;
-}
-#headerSearch {
-    height: 50%;
-    width: 50%;
-    padding: 3px;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    background-color: rgba(250, 250, 250, 0.8);
-    border-radius: 30px;
-}
-#headerSearch #search {
-    height: 100%;
-    width: 80%;
-    margin: 0 5% 0 5%;
-    border: none;
-    background-color: rgba(250, 250, 250, 0);
-}
-#headerSearch #searchIcon {
-    height: 15px;
-    width: auto;
-    margin: 0 5% 0 5%;
-}
-#headerSearch #searchIcon:active {
-    transform: scale(0.8);
-    transition: 0.25s;
-}
-
-#headerCartLink{
-    width: 5%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
-#headerCartIcon {
-    width: 50px;
-    height: auto;
-}
-#headerCartIcon:active {
-    transform: scale(0.95);
-    transition: 0.25s;
-}
-
-#headerAccountLink {
-    width: 5%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
-#headerAccountIcon {
-    width: 50px;
-    height: auto;
-}
-#headerAccountIcon:active {
-    transform: scale(0.95);
-    transition: 0.25s;
-}
-
-nav {
-    width: 100%;
-    padding: 5px;
-    margin-bottom: 50px;
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-evenly;
-    align-items: center;
-    font-weight: bold;
-    background-color: rgba(0, 0, 50, 0.80);
-    border-radius: 0px 0px 10px 10px;
-    backdrop-filter: blur(25px);
-    position: sticky;
-    top: 0;
-    z-index: 50;
-}
-nav a {
-    width: 10%;
-    padding: 5px;
-    color: white;
-    text-align: center;
-    text-decoration: none;
-    border-radius: 10px;
-}
-nav a:hover {
-    background-color: var(--bleu1);
-    transition: 0.25s;
-}
-nav a:active {
-    background-color: rgb(0, 80, 200);
-    transform: scale(0.95);
-    transition: 0.25s;
-}
 
 
 /* CSS pour la page Panier •••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••• */
@@ -158,6 +30,7 @@ nav a:active {
     display: flex;
     flex-wrap: wrap;
     justify-content: left;
+    margin: 0px 0px 50px 0px;
 }
 .cartHome h1 {
     width: 100%;
