--- a/css/products.css
+++ b/css/products.css
@@ -19,135 +19,7 @@ body {
 
 
 
-/* CSS pour le header •••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••• */
 
-
-header {
-    width: 100%;
-    padding: 10px;
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-between;
-    align-items: center;
-    background-color: rgba(0, 100, 255, 0.85);
-}
-
-#headerLogoLink {
-    width: 15%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
-#headerLogo {
-    width: 50px;
-    height: auto;
-}
-#headerLogo:hover {
-    filter: brightness(1.5);
-    transition: 0.25s;
-}
-#headerLogo:active {
-    transform: scale(0.95);
-    transition: 0.25s;
-}
-
-#headerSearchDiv {
-    width: 70%;
-    height: 100%;
-    display: flex;
-    justify-content: right;
-    align-items: center;
-}
-#headerSearch {
-    height: 50%;
-    width: 50%;
-    padding: 3px;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    background-color: rgba(250, 250, 250, 0.8);
-    border-radius: 30px;
-}
-#headerSearch #search {
-    height: 100%;
-    width: 80%;
-    margin: 0 5% 0 5%;
-    border: none;
-    background-color: rgba(250, 250, 250, 0);
-}
-#headerSearch #searchIcon {
-    height: 15px;
-    width: auto;
-    margin: 0 5% 0 5%;
-}
-#headerSearch #searchIcon:active {
-    transform: scale(0.8);
-    transition: 0.25s;
-}
-
-#headerCartLink{
-    width: 5%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
-#headerCartIcon {
-    width: 50px;
-    height: auto;
-}
-#headerCartIcon:active {
-    transform: scale(0.95);
-    transition: 0.25s;
-}
-
-#headerAccountLink {
-    width: 5%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
-#headerAccountIcon {
-    width: 50px;
-    height: auto;
-}
-#headerAccountIcon:active {
-    transform: scale(0.95);
-    transition: 0.25s;
-}
-
-nav {
-    width: 100%;
-    padding: 5px;
-    margin-bottom: 50px;
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-evenly;
-    align-items: center;
-    font-weight: bold;
-    background-color: rgba(0, 0, 50, 0.80);
-    border-radius: 0px 0px 10px 10px;
-    backdrop-filter: blur(25px);
-    position: sticky;
-    top: 0;
-    z-index: 50;
-}
-nav a {
-    width: 10%;
-    padding: 5px;
-    color: white;
-    text-align: center;
-    text-decoration: none;
-    border-radius: 10px;
-}
-nav a:hover {
-    background-color: var(--bleu1);
-    transition: 0.25s;
-}
-nav a:active {
-    background-color: rgb(0, 80, 200);
-    transform: scale(0.95);
-    transition: 0.25s;
-}
 
 
 
@@ -242,4 +114,92 @@ main article button:active {
     background-color: rgb(0, 80, 200);
     transform: scale(0.95);
     transition: 0.25s;
+}
+
+
+
+/* CSS pour la Newsletter •••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••• */
+
+
+
+aside {
+    width: 100%;
+    background-color: #C8E6FF;
+    padding: 60px 0px 70px 0px;
+    margin: 50px 0px 0px 0px;
+}
+
+aside div {
+    background-color: #C8E6FF;
+    width: 80%;
+    margin: auto;
+}
+
+aside h2 {
+    margin: 0px 0px 40px 0px;
+}
+
+aside section {
+    display: flex;
+    flex-wrap: wrap;
+}
+
+aside form {
+    width: auto;
+    height: 65px;
+    background-color: white;
+    border-radius: 20px;
+    display: flex;
+    align-items: center;
+}
+
+aside input {
+    outline: none;
+    border: none;
+}
+
+aside #email{
+    background-color: white;
+    padding: 10px 0px 10px 30px;
+    width: 300px;
+    height: 45px;
+    border-radius: 20px;
+    margin: 0px 0px 0px 0px;
+}
+
+aside #submit{
+    padding: 10px;
+    margin: 0px 13px 0px 13px;
+    background-color: #6c6c6c;
+    color: white;
+    border-radius: 10px;
+    height: 40px;
+    width: 90px;
+    text-align: center;
+}
+
+aside #submit:hover{
+    transform: scale(1.1);
+    transition: 0.25s;
+    background-color: #0064FF;
+}
+
+aside p {
+    color: #0064FF;
+    margin: 0px 0px 40px 0px;
+    font-size: 14px;
+}
+
+aside span{
+    display: flex;
+    padding: 40px 0px 40px 0px;
+    width: 100%;
+}
+
+aside a {
+    display: block;
+    height: 20px;
+    margin: 0px 10px 0px 10px;
+    color: #6c6c6c;
+    font-size: 12px;
 }
