--- a/css/index.css
+++ b/css/index.css
@@ -19,12 +19,7 @@ body {
 
 
 
-
-
-
-
 /* CSS pour la page d'accueil •••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••• */
-
 
 
 .container{
@@ -329,6 +324,9 @@ main .brand-img:hover{
 
 
 
+/* CSS pour la Newsletter •••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••• */
+
+
 aside {
     width: 100%;
     background-color: #C8E6FF;
@@ -409,4 +407,3 @@ aside a {
     color: #6c6c6c;
     font-size: 12px;
 }
-
