--- a/css/cart.css
+++ b/css/cart.css
@@ -19,9 +19,6 @@ body {
 
 
 
-
-
-
 /* CSS pour la page Panier •••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••• */
 
 
@@ -43,12 +40,23 @@ body {
     flex-wrap: wrap;
     justify-content: space-between;
 }
+@media screen and (max-width:800px) {
+    .cartHome form {
+        justify-content: center;
+    }
+}
 
 .cartProducts {
     width: 60%;
     padding: 15px;
     background-color: white;
     border-radius: 30px;
+}
+@media screen and (max-width:800px) {
+    .cartProducts {
+        width: 85%;
+        margin: 0 0 30px 0;
+    }
 }
 
 .cartTotalPrice {
@@ -93,4 +101,16 @@ body {
     filter: brightness(0.75);
     transform: scale(0.95);
     transition: 0.25s;
+}
+@media screen and (max-width:800px) {
+    .cartTotalPrice {
+        width: 85%;
+        padding: 15px;
+    }
+    .cartTotalPrice .totalPrice {
+        width: 25%;
+    }
+    .cartTotalPrice p {
+        width: 75%;
+    }
 }
