--- a/css/products.css
+++ b/css/products.css
@@ -212,3 +212,19 @@ aside a {
     color: #6c6c6c;
     font-size: 12px;
 }
+
+@media screen and (max-width: 900px){
+    aside span{
+        width: 700px;
+    }
+    
+    aside a {
+        font-size: 13px;
+    }
+}
+
+@media screen and (max-width: 480px){
+    aside #email{
+        width: 170px;
+    }
+}
